samples/_failures_safe/1761335790_62ea8a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bd34ad18.c: In function ‘main’:
./samples/SAFE/__tmp_bd34ad18.c:150:22: error: missing terminating " character
  150 |     print_matrix(&b, "B
      |                      ^~
./samples/SAFE/__tmp_bd34ad18.c:150:5: error: expected expression at end of input
  150 |     print_matrix(&b, "B
      |     ^~~~~~~~~~~~
./samples/SAFE/__tmp_bd34ad18.c:150:5: error: expected declaration or statement at end of input
